syntax = "proto3";

package shop.srv.video;

service Video {
	rpc GetVideoList(VideoListReq) returns (VideoListResp) {}
}


message VideoListReq {
	string CategoryId = 1;
	int32 PageNum = 2;
	int32 PageSize = 3;
}

message VideotResp {
	int64 Id = 1;
	string Title = 2;
	string ThumbUrl = 3;
	string Avatar = 4;
	string Author = 5;
	string Duration = 6;
	string ReadCount = 7;
	string CommentCount = 8;
	int32 LikeCount = 9;
	string Category = 10;
	int32 ViewType = 11;
	int32 IsRecommend = 12;
	string Content = 13;
	string Tags = 14;
	string VideoDesc = 15;

}

message VideoListResp {
	repeated VideotResp videoResp = 1;
}
